--- a/index.html
+++ b/index.html
@@ -1,13 +1,9 @@
 <!DOCTYPE html>
-<h1>tessst page</h1>
+<h1>tessst page hosting </h1>
 <div>
     <a href="google.com">google !</a>
-<<<<<<< HEAD
-    <h1>tessst page</h1>
-    <h1>tessst page</h1>
-    <h1>tessst page</h1>
-    <h1>tessst page</h1>
-=======
->>>>>>> 9526e1ed21cde2432cdb99a6080dd3d7c654c5ea
+    <h1>Hello</h1>
+    <h2>teeeest</h2>
+
 </div>
 </html>
