--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <h1>tessst page hosting </h1>
 <div>
-    <a href="google.com">google !</a>
+    <a href="https://www.google.com">google !</a>
     <h1>Hello</h1>
-    <h2>teeeest</h2>
+    <p>this is a test test test paragraph </p>
 
 </div>
 </html>
